--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # Social integration
 # -----------------------------------------------------------------------------
 
-acm_id: https://dl.acm.org/profile/99659309146 # your dl.acm.org/profile/id
+acm_id: 99659309146 # your dl.acm.org/profile/id
 blogger_url:  # your blogger URL
 bluesky_url: # your bluesky URL
 dblp_url: https://dblp.org/pid/198/4198.html # your DBLP profile url
@@ -79,23 +79,23 @@ facebook_id: # your facebook id
 flickr_id: # your flickr id
 github_username: cann-alberto # your GitHub user name
 gitlab_username: # your GitLab user name
-ieee_id: https://ieeexplore.ieee.org/author/37086024693 # your ieeexplore.ieee.org/author/id
+ieee_id: 37086024693 # your ieeexplore.ieee.org/author/id
 instagram_id: # your instagram id
 kaggle_id: # your kaggle id
 keybase_username: # your keybase user name
 lastfm_id: # your lastfm id
 lattes_id: # your ID on Lattes (Brazilian Lattes CV)
-linkedin_username: https://www.linkedin.com/in/alberto-cannav%C3%B2-978a37b7/ # your LinkedIn user name
+linkedin_username: alberto-cannav%C3%B2-978a37b7/ # your LinkedIn user name
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 medium_username: # your Medium username
-orcid_id: https://orcid.org/0000-0002-6884-9268 # your ORCID ID
+orcid_id: 0000-0002-6884-9268 # your ORCID ID
 osf_id: # your OSF ID
 pinterest_id: # your pinterest id
-publons_id: https://www.webofscience.com/wos/author/record/2249500 # your ID on Publons
+publons_id: 2249500 # your ID on Publons
 quora_username: # your Quora username
 research_gate_profile: # your profile on ResearchGate
 scholar_userid: qc6CJjYAAAAJ # your Google Scholar ID
-scopus_id: https://www.scopus.com/authid/detail.uri?authorId=57194155419 # your profile on Scopus
+scopus_id: 57194155419 # your profile on Scopus
 semanticscholar_id: # your Semantic Scholar ID
 spotify_id: # your spotify id
 stackoverflow_id: # your stackoverflow id
