rference list updated

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # -----------------------------------------------------------------------------
 
 title: Alberto Cannavò # the website title (if blank, full name will be used instead)
-first_name: <b>Alberto<\b>
+first_name: Alberto
 middle_name:
 last_name: Cannavò
 email: alberto.cannavo@polito.it
