--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ pinterest_id: # your pinterest id
 publons_id: # your ID on Publons
 quora_username: # your Quora username
 research_gate_profile: # your profile on ResearchGate
-scholar_userid: P-3NxFMAAAAJ&hl # your Google Scholar ID
+scholar_userid: P-3NxFMAAAAJ # your Google Scholar ID
 scopus_id: 57194155419 # your profile on Scopus
 semanticscholar_id: # your Semantic Scholar ID
 spotify_id: # your spotify id
